Change font size

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,8 @@
     {% endif %}
 
     {% if sidebar.name %}
-    <h2 class="name">{{ sidebar.name }}</h2>
+    <h1 class="name"
+        tyle="font-size:1em;">{{ sidebar.name }}</h1>
     {% endif %}
 
     {% if sidebar.tagline %}
