--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,8 +8,7 @@
     {% endif %}
 
     {% if sidebar.name %}
-    <h1 class="name"
-        tyle="font-size:10000000em;">{{ sidebar.name }}</h1>
+    <h2 class="name">{{ sidebar.name }}</h2>
     {% endif %}
 
     {% if sidebar.tagline %}
