--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
     <img class="avatar" src="{{ site.baseurl }}/assets/images/{{ sidebar.avatar }}" alt="profile picture" />
     {% endif %}
 
-    <h1 class="name" style=font-size:200px>{{ sidebar.name }}</h1>
+    <h1 class="name">{{ sidebar.name }}</h1>
     {% endif %}
 
     {% if sidebar.tagline %}
